# PrintVer-Configured-Header-Example

./: CMakeLists.txt  ReadMe.md
cmake/: PrintVer-config.cmake
include/: CMakeLists.txt  config.hpp.in
include/PrintVer/: printver.hpp
src/: CMakeLists.txt  printver.cpp
